# paircraft

./: CMakeLists.txt  README.md  bpe.py  prompts
include/paircraft/: bpe.h
src/: bpe.cpp
tests/: CMakeLists.txt  test_bpe.cpp
tools/: tokenize.cpp
